# pyshine-translator

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.bat  config_default.json  create_icon.py  debug_mac.py  launcher.py  main.py  pyproject.toml  pyshine-translator.bat  requirements.txt  run_translator.bat  setup.py  start_ollama.bat  start_translator.bat  start_with_conda.bat  test_applications.py  test_automated.py  test_bidirectional.py  test_bidirectional_mock.py  test_bidirectional_mock2.py  test_bidirectional_spanish.py  test_callback_direct.py  test_config.py  test_config_update.py  test_copy_automated.py  test_copy_simulation.py  test_detection.py  test_detection_improved.py  test_detection_spanish.py  test_heuristic.py  test_hotkey_context.py  test_hotkey_default.py  test_hotkey_improvements.py  test_hotkey_registration.py  test_hotkey_trigger_actual.py  test_icon.py  test_mac_gui.py  (+3 more)
src/: __init__.py  __main__.py  ai_translator.py  config_manager.py  hotkey_manager.py  logger.py  translator.py  tray_app.py
tests/: test_translator.py
